--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple example of Vuejs usage with socket.io",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "author": "Patrick Francis Omogbeme",
   "license": "ISC",
